# temp

./: CMakeLists.txt  document.cpp  document.h  main.cpp  paginator.h  read_input_functions.cpp  read_input_functions.h  request_queue.cpp  request_queue.h  search_server.cpp  search_server.h  string_processing.cpp  string_processing.h  temp.cpp
